@@ -93,6 +93,7 @@
     <Compile Include="Fakes\Shield.cs" />
     <Compile Include="Integration\ConstantTests.cs" />
     <Compile Include="Fakes\ResolveCountingProvider.cs" />
+    <Compile Include="Integration\ConstructorArgumentTests.cs" />
     <Compile Include="Integration\InterfaceSegregationWithTwoServicesTests.cs" />
     <Compile Include="Integration\InterfaceSegregationWithFourServicesTests.cs" />
     <Compile Include="Integration\InterfaceSegregationWithThreeServicesTests.cs" />
