@@ -1,19 +1,31 @@
-#region License
-// 
-// Author: Nate Kohari <nate@enkari.com>
-// Copyright (c) 2007-2010, Enkari, Ltd.
-// 
-// Dual-licensed under the Apache License, Version 2.0, and the Microsoft Public License (Ms-PL).
-// See the file LICENSE.txt for details.
-// 
-#endregion
-#region Using Directives
-using System;
-using Ninject.Activation;
-#endregion
+//-------------------------------------------------------------------------------
+// <copyright file="ConstructorArgument.cs" company="Ninject Project Contributors">
+//   Copyright (c) 2007-2009, Enkari, Ltd.
+//   Copyright (c) 2009-2011 Ninject Project Contributors
+//   Authors: Nate Kohari (nate@enkari.com)
+//            Remo Gloor (remo.gloor@gmail.com)
+//           
+//   Dual-licensed under the Apache License, Version 2.0, and the Microsoft Public License (Ms-PL).
+//   you may not use this file except in compliance with one of the Licenses.
+//   You may obtain a copy of the License at
+//
+//       http://www.apache.org/licenses/LICENSE-2.0
+//   or
+//       http://www.microsoft.com/opensource/licenses.mspx
+//
+//   Unless required by applicable law or agreed to in writing, software
+//   distributed under the License is distributed on an "AS IS" BASIS,
+//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+//   See the License for the specific language governing permissions and
+//   limitations under the License.
+// </copyright>
+//-------------------------------------------------------------------------------
 
 namespace Ninject.Parameters
 {
+    using System;
+
+    using Ninject.Activation;
     using Ninject.Planning.Targets;
 
     /// <summary>
@@ -26,21 +38,63 @@ namespace Ninject.Parameters
         /// </summary>
         /// <param name="name">The name of the argument to override.</param>
         /// <param name="value">The value to inject into the property.</param>
-        public ConstructorArgument(string name, object value) : base(name, value, false) { }
+        public ConstructorArgument(string name, object value)
+            : base(name, value, false)
+        {
+        }
 
         /// <summary>
         /// Initializes a new instance of the <see cref="ConstructorArgument"/> class.
         /// </summary>
         /// <param name="name">The name of the argument to override.</param>
         /// <param name="valueCallback">The callback to invoke to get the value that should be injected.</param>
-        public ConstructorArgument(string name, Func<IContext, object> valueCallback) : base(name, valueCallback, false) { }
+        public ConstructorArgument(string name, Func<IContext, object> valueCallback)
+            : base(name, valueCallback, false)
+        {
+        }
 
         /// <summary>
         /// Initializes a new instance of the <see cref="ConstructorArgument"/> class.
         /// </summary>
         /// <param name="name">The name of the argument to override.</param>
         /// <param name="valueCallback">The callback to invoke to get the value that should be injected.</param>
-        public ConstructorArgument(string name, Func<IContext, ITarget, object> valueCallback) : base(name, valueCallback, false) { }
+        public ConstructorArgument(string name, Func<IContext, ITarget, object> valueCallback)
+            : base(name, valueCallback, false)
+        {
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="ConstructorArgument"/> class.
+        /// </summary>
+        /// <param name="name">The name of the argument to override.</param>
+        /// <param name="value">The value to inject into the property.</param>
+        /// <param name="shouldInherit">Whether the parameter should be inherited into child requests.</param>
+        public ConstructorArgument(string name, object value, bool shouldInherit)
+            : base(name, value, shouldInherit)
+        {
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="ConstructorArgument"/> class.
+        /// </summary>
+        /// <param name="name">The name of the argument to override.</param>
+        /// <param name="valueCallback">The callback to invoke to get the value that should be injected.</param>
+        /// <param name="shouldInherit">if set to <c>true</c> [should inherit].</param>
+        public ConstructorArgument(string name, Func<IContext, object> valueCallback, bool shouldInherit)
+            : base(name, valueCallback, shouldInherit)
+        {
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="ConstructorArgument"/> class.
+        /// </summary>
+        /// <param name="name">The name of the argument to override.</param>
+        /// <param name="valueCallback">The callback to invoke to get the value that should be injected.</param>
+        /// <param name="shouldInherit">if set to <c>true</c> [should inherit].</param>
+        public ConstructorArgument(string name, Func<IContext, ITarget, object> valueCallback, bool shouldInherit)
+            : base(name, valueCallback, shouldInherit)
+        {
+        }
 
         /// <summary>
         /// Determines if the parameter applies to the given target.
